# protein-i-jepa

./: .gitignore  README.md  pyproject.toml
data/: secondary_structure.tsv
scripts/: download_netsurfp.py  download_secondary_structure.py  make_training_report.py  publish_netsurfp_to_hf.py  train_protein_jepa.py
src/protein_jepa/: __init__.py  alphabet.py  cli.py  data.py  download_netsurfp.py  download_secondary.py  losses.py  masking.py  metrics.py  model.py  probe.py  publish_hf_secondary.py  report.py  train.py  visualize.py
tests/: test_data.py  test_device.py  test_download_netsurfp.py  test_download_secondary.py  test_masking.py  test_model.py  test_probe.py  test_publish_hf_secondary.py  test_report.py  test_train_smoke.py  test_visualize.py
